--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Chromed Bird",
-  "version": "0.5",
+  "version": "0.51",
   "description": "General purpose Twitter extension",
   "browser_action": {
     "default_icon": "img/icon19.png",
@@ -18,7 +18,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["http://twitter.com/oauth/authorize"],
+      "matches": ["http://twitter.com/oauth/authorize", "https://twitter.com/oauth/authorize"],
       "js": ["lib/jquery.js", "lib/oauth_authorizer.js"]
     }
   ],
