--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,7 @@
   "content_scripts": [
     {
       "matches": ["http://twitter.com/oauth/authorize", "https://twitter.com/oauth/authorize"],
-      "js": ["lib/jquery.js", "lib/oauth_authorizer.js"]
+      "js": ["lib/3rdparty/jquery.js", "lib/oauth_authorizer.js"]
     }
   ],
   "update_url": "http://clients2.google.com/service/update2/crx"
