--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Chromed Bird",
-  "version": "0.51",
+  "version": "0.6",
   "description": "Chromed Bird is a Twitter extension that allows you to follow your timelines and interact with your Twitter account.",
   "browser_action": {
     "default_icon": "img/icon19.png",
@@ -16,7 +16,9 @@
     "http://api.tr.im/"
   ],
   "icons": {
-    "19": "img/icon19.png"
+    "19": "img/icon19.png",
+    "32": "img/icon32.png",
+    "48": "img/icon48.png"
   },
   "content_scripts": [
     {
