Improved support for desktop notifications and adding an option to enable it. Closes #108.

--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,7 @@
   },
   "background_page": "background.html",
   "permissions": [
+    "notifications",
     "tabs",
     "http://*/*",
     "https://*/*"
