--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "browser_action": {
     "default_icon": "img/icon19.png",
     "default_title": "Chromed Bird",
-    "popup": "popup.html"
+    "popup": "popup.html?popup"
   },
   "background_page": "background.html",
   "permissions": [
