--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-  "name": "Shiny Bird",
-  "version": "1.9.8.0",
+  "name": "Silver Bird",
+  "version": "1.9.8.1",
   "description": "__MSG_extDescription__",
   "default_locale": "en",
   "browser_action": {
     "default_icon": "img/icon19.png",
-    "default_title": "Shiny Bird",
+    "default_title": "Silver Bird",
     "popup": "popup.html?popup"
   },
   "background_page": "background.html",
