disable animation in notification windows
this fix introduce a new configuration option to disable jQuery-based
animation for sliding bar in notification popup. The animation generate
a bad issue on multimonitor with notification that stuck between
screens.

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Silver Bird",
+    "name": "Silver Bird -custom",
     "version": "1.9.9.1",
     "manifest_version": 2,
     "description": "__MSG_extDescription__",
